# ChatApp

./: LICENSE  README.md
ChatApp/: ChatApp.slnx
ChatApp/ChatApp/: App.xaml.cs  ChatApp.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest
ChatServer/: .gitignore  Cargo.toml
ChatServer/docker/: .gitignore  docker-compose.yml
ChatServer/migrations/: 0000_extensions.sql  0001_create_users_and_files.sql  0001_users_files.sql  0002_create_refresh_tokens.sql  0002_refresh_tokens .sql  0003_conversations .sql  0003_create_conversations.sql  0004_conversation_participants .sql  0004_create_messages.sql  0005_create_message_read_receipts.sql  0005_messages.sql  0006_create_message_reactions.sql  0006_message_attachments.sql  0007_create_typing_indicators.sql  0007_create_useful_functions.sql  0008_add_message_soft_delete.sql  0009_create_useful_functions.sql  0011_add_constraints_and_validation.sql  008_create_indexes_for_performance.sql
ChatServer/src/: error.rs  main.rs
ChatServer/src/api/: auth.rs  conversation.rs  user.rs  users.rs
ChatServer/src/db/: auth.rs  conversation.rs  error.rs  mod.rs  user.rs  users.rs
ChatServer/src/middleware/: password.rs
ChatServer/src/models/: auth.rs  conversation.rs  mod.rs  user.rs
ChatServer/src/routes/: mod.rs
ChatSite/: index.html  package-lock.json  package.json
ChatSite/src/: App.css  App.tsx  globalState.ts  index.css  main.tsx
ChatSite/src/components/chat/: Chat.css  Chat.tsx
ChatSite/src/components/chat/message/: Message.css  Message.tsx
ChatSite/src/components/home/: Home.css  Home.tsx
ChatSite/src/components/register/: Register.css  Register.tsx
ChatSite/src/components/sidebar/: Sidebar.css  Sidebar.tsx
ChatSite/src/components/sidebar/userbutton/: UserButton.tsx
