[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }

uuid = { version = "1.19.0", features = ["serde", "v4"] }

tokio = { version = "1.48.0", features = ["full"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json", "macros", "migrate", "uuid"] }

axum = { version = "0.8.7", features = ["json", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

argon2 = "0.6.0-rc.4"
password-hash = "0.6.0-rc.4"
rand_core = "0.10.0-rc-2"

jsonwebtoken = { version = "10", features = ["rust_crypto"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
