[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["default"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = {version = "1.19.0", features = ["serde"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time", "migrate", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
time = { version = "0.3.44", features = ["serde"] }